@@ -1,0 +1,15 @@
+	.text
+	.section .text.f1,"ax",%progbits
+	.type f1, %function
+f1:
+	nop
+	nop
+f1a:
+	nop
+	.section .text.f2,"ax",%progbits
+	.type f2, %function
+f2:
+	nop
+	.word 1
+f2a:
+	nop
